# Inazuma

./: LICENSE  README.md  pyproject.toml
fastanime_gui/: __main__.py  app.py
fastanime_gui/Controller/: anime_screen.py  home_screen.py
fastanime_gui/Model/: anime_screen.py
fastanime_gui/Utility/: anilist_data_helper.py  media_card_loader.py
fastanime_gui/View/: base_screen.py
fastanime_gui/View/AnimeScreen/: anime_screen.kv  anime_screen.py
fastanime_gui/View/DownloadsScreen/components/: task_card.kv
fastanime_gui/View/components/media_card/: media_card.py
fastanime_gui/View/components/media_card/components/: media_popup.kv  media_popup.py
inazuma/: __init__.py
inazuma/Model/: home_screen.py  my_list_screen.py  search_screen.py
inazuma/Utility/: media_card_loader.py  user_data_helper.py
inazuma/View/: base_screen.py
inazuma/View/AnimeScreen/: anime_screen.py
inazuma/View/DownloadsScreen/components/: task_card.kv
