[tool.poetry]
name = "fastanime-gui"
version = "0.1.0"
description = "A gui wrapper for for fastanime"
authors = ["Benex254 <benedictx855@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Kivy = "^2.3.0"
kivymd = "2.0.0"
fastanime = "^0.31.0"
yt-dlp = "^2024.7.25"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
