[tool.poetry]
name = "inazuma"
version = "0.1.0"
description = "A gui wrapper over fastanime"
authors = ["Benex254 <benextempest@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastanime = "^2.5.3"
Kivy = "^2.3.0"
yt-dlp = "^2024.9.27"
kivymd = { url = "https://github.com/kivymd/KivyMD/archive/master.zip" }
ffpyplayer = "^4.5.1"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.382.post1"
ruff = "^0.6.8"

[tool.poetry.scripts]
inazuma = 'inazuma:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
